// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RelayViewerHandleTransform matches expected output: mutation.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
mutation ViewerMutation($input: CommentCreateInput!) {
  commentCreate(input: $input) {
    viewer {
      actor {
        id
      }
    }
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
mutation ViewerMutation(
  $input: CommentCreateInput!
) {
  commentCreate(input: $input) {
    viewer @__clientField(handle: "viewer") {
      actor {
        id
      }
    }
  }
}

`;

exports[`RelayViewerHandleTransform matches expected output: mutation-with-handle.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
mutation ViewerMutation($input: CommentCreateInput!) {
  commentCreate(input: $input) {
    viewer @__clientField(handle: "otherViewer") @__clientField(handle: "viewer") {
      actor {
        id
      }
    }
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
mutation ViewerMutation(
  $input: CommentCreateInput!
) {
  commentCreate(input: $input) {
    viewer @__clientField(handle: "otherViewer") @__clientField(handle: "viewer") {
      actor {
        id
      }
    }
  }
}

`;

exports[`RelayViewerHandleTransform matches expected output: query.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
query ViewerQuery {
  viewer {
    actor {
      id
    }
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
query ViewerQuery {
  viewer @__clientField(handle: "viewer") {
    actor {
      id
    }
  }
}

`;

exports[`RelayViewerHandleTransform matches expected output: query-with-handle.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
query ViewerQuery {
  viewer @__clientField(handle: "otherViewer") @__clientField(handle: "viewer") {
    actor {
      id
    }
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
query ViewerQuery {
  viewer @__clientField(handle: "otherViewer") @__clientField(handle: "viewer") {
    actor {
      id
    }
  }
}

`;
